--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -21,7 +21,7 @@
         <div class="navbar container-fluid">
 
             <a class="navbar-brand" href="../index.html">
-                <img src="../imagenes/google.png" alt="Logo" class="logo d-inline-block align-text-center">
+                <img src="../imagenes/google (1).png" alt="Logo" class="logo d-inline-block align-text-center">
                 Julian Albornoz
             </a>
 
@@ -43,16 +43,16 @@
             <form>
                 <p>Completá el formulario y nos pondremos en contacto</p>
                 <!-- <label for="nombre">Ingresá tu nombre</label> -->
-                <input type="text" id="nombre" placeholder="ingrese su nombre" class="contact-form__nombre">
+                <input type="text" id="nombre" placeholder="ingresá tu nombre" class="contact-form__nombre">
                 <br>
                 <!-- <label for="apellido">Ingresá tu apellido</label> -->
-                <input type="apellido" id="apellido" placeholder="ingrese su apellido" class="contact-form__apellido">
+                <input type="apellido" id="apellido" placeholder="ingresá tu apellido" class="contact-form__apellido">
                 <br>
                 <!-- <label for="email">Ingresá tu email</label> -->
-                <input required type="email" id="email" placeholder="ingrese su email" class="contact-form__email">
+                <input required type="email" id="email" placeholder="ingresá tu email" class="contact-form__email">
                 <br>
                 <!-- <label for="telefono">Ingresá tu telefono</label> -->
-                <input required="telefono" id="telefono" placeholder="ingrese su telefono"
+                <input required="telefono" id="telefono" placeholder="ingresá tu telefono"
                     class="contact-form__telefono">
                 <br> 
                 <label for="sumbit"></label>
