--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="navbar container-fluid">
 
             <a class="navbar-brand" href="index.html">
-                <img src="imagenes/google.png" alt="Logo" class="logo d-inline-block align-text-center">
+                <img src="imagenes/google (1).png" alt="Logo" class="logo d-inline-block align-text-center">
                 Julian Albornoz
             </a>
 
@@ -50,11 +50,6 @@
                     <a href="https://www.samsung.com/ar/" target="_blank">Samsung</a>
                     <a href="https://www.fragrantica.es/" target="_blank">Fragrantica</a>
                 </p>
-                <h4 class="consultame">Ante cualquier consulta, no dudes en ponerte en contacto conmigo</h4>
-                <div class="boton-inicio">
-                    <button type="button" class="btn btn-outline-secondary"><a href="./pages/presupuestos.html">
-                            Consultame </a></button>
-                </div>
             </aside>
         </div>
     </main>
