--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -22,7 +22,7 @@
         <div class="navbar container-fluid">
 
             <a class="navbar-brand" href="../index.html">
-                <img src="../imagenes/google.png" alt="Logo" class="logo d-inline-block align-text-center">
+                <img src="../imagenes/google (1).png" alt="Logo" class="logo d-inline-block align-text-center">
                 Julian Albornoz
             </a>
 
