--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Julian albornoz">
-    <meta name="description" content="desarrollador web destinado a construir sitios minimalistas y eficaces para todas aquellas personas que quieran potenciar su empresa o negocio">
+    <meta name="description"
+        content="desarrollador web destinado a construir sitios minimalistas y eficaces para todas aquellas personas que quieran potenciar su empresa o negocio">
     <meta name="keywords" content="desarollo, sitio, web">
     <meta name="author" content="julian albornoz">
     <title>Index</title>
@@ -18,11 +19,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body class="inicio">
+
     <nav>
-        <div class="navbar container-fluid">
+        <div class="navbar">
 
             <a class="navbar-brand" href="index.html">
                 <img src="imagenes/google (1).png" alt="Logo" class="logo d-inline-block align-text-center">
@@ -39,20 +42,46 @@
 
         </div>
     </nav>
+
+
     <main class="layoutIndex">
+
         <div class="mainIndex">
+
             <aside class="container-fluid">
                 <div class="animate__animated animate__zoomIn">
-                    <h3 class="aside-barra">Trabajos Recientes</h3>
+                    <h3 class="aside-barra">Bienvenidos</h3>
                 </div>
-                <p class="aside-adentro">Acá te dejo algunos de mis trabajos que te pueden interesar:
+                <!-- <p class="aside-adentro">Te dejo algunos de mis trabajos que te pueden interesar:
                     <a href="https://www.apple.com/" target="_blank">Apple</a>
                     <a href="https://www.samsung.com/ar/" target="_blank">Samsung</a>
                     <a href="https://www.fragrantica.es/" target="_blank">Fragrantica</a>
-                </p>
+                </p> -->
             </aside>
         </div>
     </main>
+
+    <section>
+        <div class="contenido1">
+            <div data-aos="flip-up">
+                <img class="fotito" src="./imagenes/codeando.png" alt="persona programando">
+                <p class="parraf">Programa conmigo y no te vas a arrpentir</p>
+            </div>
+        </div>
+        <div class="contenido1">
+            <div data-aos="flip-down">
+                <img class="fotito" src="./imagenes/coder.png" alt="persona escribiendo">
+                <p class="parraf">Es hora de avanzar en tu emprendimiento</p>
+            </div>
+        </div>
+        <div class="contenido1">
+            <div data-aos="flip-down">
+                <img class="fotito" src="./imagenes/notebook.png" alt="notebook">
+                <p class="parraf">Contactame y empezá el 2024 con todo</p>
+            </div>
+        </div>
+    </section>
+
     <footer class="footerIndex">
         <h4 class="pie2">Seguinos en nuestras redes</h4>
         <div>
@@ -66,11 +95,15 @@
             </ul>
 
         </div>
-        <p class="ultima-palabra">© Todos los derechos reservados</p>
+        <p class="ultima-palabra">© 2023 Julián Albornoz - Desarrollador web</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
