--- a/pages/metas.html
+++ b/pages/metas.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Julian albornoz">
-    <meta name="description" content="desarrollador web destinado a construir sitios minimalistas y eficaces para todas aquellas personas que quieran potenciar su empresa o negocio">
+    <meta name="description"
+        content="desarrollador web destinado a construir sitios minimalistas y eficaces para todas aquellas personas que quieran potenciar su empresa o negocio">
     <meta name="keywords" content="desarollo, sitio, web">
     <meta name="author" content="julian albornoz">
     <title>Metas</title>
@@ -13,12 +14,13 @@
     <script src="https://kit.fontawesome.com/f9fb091f31.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body class="inicio">
+
     <nav>
-        <div class="navbar container-fluid">
+        <div class="navbar">
 
             <a class="navbar-brand" href="../index.html">
                 <img src="../imagenes/google (1).png" alt="Logo" class="logo d-inline-block align-text-center">
@@ -38,19 +40,21 @@
 
     <h1 class="inicio-metas">Metas</h1>
     <section class="metas">
-            <div class="contenido-prin">
-                <div data-aos="fade-right">
-                    <img class="imagen" src="../imagenes/calculadora.png" alt="persona escribiendo">
-                </div>
-                <p class="parrafo-main">
-                    Tengo experiencia para desarrollar y diseñar sitios web personalizados a la necesidad de cada
-                    cliente, que se adaptan tanto en formato desktop, como formato mobile.
-                    Me enfoco principalmente en conocimientos solidos sobre HTML y CSS, con el fin de que tu sitio web
-                    sea practico, dinamico y eficaz. <br>
-                    Hoy en dia tener un sitio web para nuestro comercio/emprendimiento es fundamental para darnos a conocer al mundo, por eso es tan importante que el desarrollador escuche al cliente para brindarle un sitio moderno y facil de utilizar.
-
-                    </p>
+        <div class="contenido-prin">
+            <div data-aos="fade-right">
+                <img class="imagen" src="../imagenes/calculadora.png" alt="persona escribiendo">
             </div>
+            <p class="parrafo-main">
+                Tengo experiencia para desarrollar y diseñar sitios web personalizados a la necesidad de cada
+                cliente, que se adaptan tanto en formato desktop, como formato mobile.
+                Me enfoco principalmente en conocimientos solidos sobre HTML y CSS, con el fin de que tu sitio web
+                sea practico, dinamico y eficaz. <br>
+                Hoy en dia tener un sitio web para nuestro comercio/emprendimiento es fundamental para darnos a conocer
+                al mundo, por eso es tan importante que el desarrollador escuche al cliente para brindarle un sitio
+                moderno y facil de utilizar.
+
+            </p>
+        </div>
 
     </section>
     <footer class="footerIndex">
@@ -66,15 +70,15 @@
             </ul>
 
         </div>
-        <p class="ultima-palabra">© Todos los derechos reservados</p>
+        <p class="ultima-palabra">© 2023 Julián Albornoz - Desarrollador web</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script>
-            AOS.init();
-        </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
