--- a/pages/presupuestos.html
+++ b/pages/presupuestos.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Julian albornoz">
-    <meta name="description" content="desarrollador web destinado a construir sitios minimalistas y eficaces para todas aquellas personas que quieran potenciar su empresa o negocio">
+    <meta name="description"
+        content="desarrollador web destinado a construir sitios minimalistas y eficaces para todas aquellas personas que quieran potenciar su empresa o negocio">
     <meta name="keywords" content="desarollo, sitio, web">
     <meta name="author" content="julian albornoz">
     <title>Presupuestos</title>
@@ -18,6 +19,7 @@
 </head>
 
 <body class="inicio">
+
     <nav>
         <div class="navbar">
 
@@ -90,7 +92,7 @@
             </ul>
 
         </div>
-        <p class="ultima-palabra">© Todos los derechos reservados</p>
+        <p class="ultima-palabra">© 2023 Julián Albornoz - Desarrollador web</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
