--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Julian albornoz">
-    <meta name="description" content="desarrollador web destinado a construir sitios minimalistas y eficaces para todas aquellas personas que quieran potenciar su empresa o negocio">
+    <meta name="description"
+        content="desarrollador web destinado a construir sitios minimalistas y eficaces para todas aquellas personas que quieran potenciar su empresa o negocio">
     <meta name="keywords" content="desarollo, sitio, web">
     <meta name="author" content="julian albornoz">
     <title>Sobre mi</title>
@@ -18,8 +19,9 @@
 </head>
 
 <body class="inicio">
+
     <nav>
-        <div class="navbar container-fluid">
+        <div class="navbar">
 
             <a class="navbar-brand" href="../index.html">
                 <img src="../imagenes/google (1).png" alt="Logo" class="logo d-inline-block align-text-center">
@@ -69,7 +71,7 @@
             </ul>
 
         </div>
-        <p class="ultima-palabra">© Todos los derechos reservados</p>
+        <p class="ultima-palabra">© 2023 Julián Albornoz - Desarrollador web</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
