--- a/pages/presupuestos.html
+++ b/pages/presupuestos.html
@@ -56,7 +56,7 @@
             </div>
 
     </nav>
-    <main>
+    <main id="tarjetitas">
         <div class="animate__animated animate__fadeInLeft">
             <div class="titlePresupuesto">
                 <h1 class="tittle">Presupuestos</h1>
@@ -67,22 +67,22 @@
                 <div class="col-sm-6">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Presupuesto Basico</h5>
+                            <h5 class="card-title d-flex justify-content-center">Presupuesto Basico</h5>
                             <p class="card-text">Este presupuesto es ideal para todo aquel que busca un diseño
                                 simple y eficaz para su sitio web.
                             </p>
-                            <a href="#" class="btn btn-secondary">Leer Más</a>
+                            <a href="./sobremi.html" class="btn btn-secondary">Leer Más</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="card h-10">
                         <div class="card-body">
-                            <h5 class="card-title">Presupuesto Pro</h5>
+                            <h5 class="card-title d-flex justify-content-center">Presupuesto Pro</h5>
                             <p class="card-text">Este presupuesto es ideal para todo aquel que busque un diseño
                                 mucho mas avanzado, minimalista y eficaz para su sitio web.
                             </p>
-                            <a href="#" class="btn btn-secondary">Leer
+                            <a href="./metas.html" class="btn btn-secondary">Leer
                                 más
                             </a>
                         </div>
@@ -94,7 +94,7 @@
     <section class="info">
         <p>
             Para mas información, no dudes en ponerte en contacto haciendo
-            <a href="./contacto.html">Click acá</a>
+            <a href="./contacto.html">Click aquí</a>
         </p>
     </section>
 
