Ultimo Commit Se Termino

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -85,7 +85,7 @@
                 <li><i class="fa-solid fa-location-dot"></i>  Direccion: Santa rosa 237</li><br>
                 <li><i class="fa-solid fa-phone"></i >  Telefono: 1164131779</li><br>
                <li><i class="fa-solid fa-envelope"></i>  Email: Julianalb@gmail.com</li><br>
-                <li><i class="fa-solid fa-clock"></i>  Horario: 09:00 a 21:00</li><br>
+                <li><i class="fa-solid fa-clock"></i>  Horario: 09:00 a 21:00 hs</li><br>
             </ul>
         
     </section>
